--- a/workspace_guergiev.ipynb
+++ b/workspace_guergiev.ipynb
@@ -1102,8 +1102,7 @@
    "outputs": [],
    "source": [
     "# Run Bayesian Optimization (UCB-Acquisition Fct) on DNN\n",
-    "hyper_space_comp_dnn = {'batch_size': (10, 500),\n",
-    "                        'learning_rate': (0.01, 0.5),\n",
+    "hyper_space_comp_dnn = {'learning_rate': (0.01, 0.5),\n",
     "                        'num_layers': (1, 6),\n",
     "                        'h_l_1': (30, 500),\n",
     "                        'h_l_2': (30, 500),\n",
@@ -1115,59 +1114,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = load_guergiev_params(\"comp_dnn_base_params.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'dt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-a5d14dfbd457>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mNeurophysiological\u001b[0m \u001b[0mHyperparameters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \"\"\"\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mlambda_max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.2\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdt\u001b[0m  \u001b[0;31m# maximum spike rate (spikes per time step)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# kernel parameters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'dt' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "{'use_sparse_feedback': 0,\n",
+       " 'nonspiking_mode': 1,\n",
+       " 'use_rand_phase_lengths': 0,\n",
+       " 'use_rand_plateau_times': 0,\n",
+       " 'use_conductances': 0,\n",
+       " 'use_broadcast': 1,\n",
+       " 'use_spiking_feedback': 0,\n",
+       " 'use_spiking_feedforward': 0,\n",
+       " 'use_symmetric_weights': 0,\n",
+       " 'noisy_symmetric_weights': 0,\n",
+       " 'update_feedback_weights': 0,\n",
+       " 'use_backprop': 0,\n",
+       " 'use_apical_conductance': 0,\n",
+       " 'use_weight_optimization': 1,\n",
+       " 'use_feedback_bias': 0,\n",
+       " 'initial_test': 0,\n",
+       " 'dt': 1.0,\n",
+       " 'mem': 1,\n",
+       " 'l_f_phase': 2,\n",
+       " 'l_t_phase': 2,\n",
+       " 'l_f_phase_test': 2,\n",
+       " 'integration_time': 1,\n",
+       " 'integration_time_test': 1,\n",
+       " 'lambda_max': 0.2,\n",
+       " 'tau_s': 3.0,\n",
+       " 'tau_L': 10.0,\n",
+       " 'g_B': 0.6,\n",
+       " 'g_A': 0,\n",
+       " 'g_L': 0.1,\n",
+       " 'E_E': 8,\n",
+       " 'E_I': -8,\n",
+       " 'g_D': 0.6,\n",
+       " 'k_B': 0.8571428571428572,\n",
+       " 'k_D': 0.8571428571428572,\n",
+       " 'k_I': 1.4285714285714286,\n",
+       " 'P_hidden': 100.0,\n",
+       " 'P_final': 499.9999999999999}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "use_sparse_feedback = False # silence 80% of feedback weights\n",
-    "nonspiking_mode = True  # Non-spiking mode (real-valued outputs)\n",
-    "use_conductances = True  # use conductances between dendrites and soma\n",
-    "use_broadcast = True  # use broadcast - feedback to all layers from output l\n",
-    "use_spiking_feedback = True  # use spiking feedback\n",
-    "use_spiking_feedforward = True  # use spiking feedforward input\n",
-    "use_symmetric_weights = False  # enforce symmetric weights\n",
-    "noisy_symmetric_weights = False  # add noise to symmetric weights\n",
-    "\n",
-    "\"\"\"\n",
-    "Neurophysiological Hyperparameters\n",
-    "\"\"\"\n",
-    "lambda_max = 0.2*dt  # maximum spike rate (spikes per time step)\n",
-    "\n",
-    "# kernel parameters\n",
-    "tau_s = 3.0  # synaptic time constant\n",
-    "tau_L = 10.0  # leak time constant\n",
-    "\n",
-    "# conductance parameters\n",
-    "g_B = 0.6  # basal conductance\n",
-    "g_A = 0.05 if use_apical_conductance else 0  # apical conductance\n",
-    "g_L = 1.0/tau_L  # leak conductance\n",
-    "g_D = g_B  # dendritic conductance in output layer\n",
-    "\n",
-    "# reversal potential parameters\n",
-    "E_E = 8  # excitation\n",
-    "E_I = -8  # inhibition\n",
-    "\n",
-    "# steady state constants\n",
-    "k_B = g_B/(g_L + g_B + g_A)\n",
-    "k_D = g_D/(g_L + g_D)\n",
-    "k_I = 1.0/(g_L + g_D)\n",
-    "\n",
-    "# weight update constants\n",
-    "P_hidden = 20.0/lambda_max      # hidden layer error signal scaling factor\n",
-    "P_final = 20.0/(lambda_max**2)  # final layer error signal scaling factor"
+    "params"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MNIST dataset\n",
+    "X_mnist, y_mnist = get_data(num_samples=70000, dataset=\"mnist\")\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_mnist, y_mnist,\n",
+    "                                                    stratify=y_mnist,\n",
+    "                                                    random_state=0,\n",
+    "                                                    test_size=1./7)\n",
+    "n_epochs = 2\n",
+    "param_fname = \"comp_dnn_base_params.json\"\n",
+    "net = CompDNN(X_train, y_train, param_fname)\n",
+    "net.train(n_epochs, log_freq=5000, verbose=True, logging=True, dataset=\"mnist\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
