--- a/workspace_viz.ipynb
+++ b/workspace_viz.ipynb
@@ -57,9 +57,7 @@
     "# Import log-helper/learning plot functions\n",
     "from utils.helpers import *\n",
     "from utils.logger import *\n",
-    "from utils.plotting import *\n",
-    "\n",
-    "from models.CompDNN_helpers import process_guergiev_logger"
+    "from utils.plotting import *"
    ]
   },
   {
@@ -335,9 +333,7 @@
     "              \"Fashion-MNIST: DNN (784-500-10)\",\n",
     "              \"CIFAR-10: DNN (3072-500-10)\"]\n",
     "\n",
-    "labels = [\"BP-MLP: Train\", \"BP-MLP: Val.\",\n",
-    "          \"Comp-MLP: Train\", \"Comp-MLP: Val.\",\n",
-    "          \"BP-CNN: Train\", \"BP-CNN: Val.\"]\n",
+    "labels = [\"BP-MLP\", \"Comp-MLP: Train\"]\n",
     "\n",
     "# Later on - Add cnn to list comprehension\n",
     "iters = [[its_dnn[i], its_comp_dnn[i]] for i in range(3)]\n",
