--- a/workspace_guergiev.ipynb
+++ b/workspace_guergiev.ipynb
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1114,7 @@
     "                        \"E_I\": (-12, -5),\n",
     "                        \n",
     "                        \"f_etas\": (0.01, 0.5),\n",
-    "                        \"b_etas\": (0, 0.5),\n",
+    "                        \"b_etas\": (0.01, 0.5),\n",
     "                        'num_layers': (1, 6),\n",
     "                        \n",
     "                        'h_l_1': (30, 500),\n",
@@ -1124,30 +1124,45 @@
     "                        'h_l_5': (30, 500),\n",
     "                        'h_l_6': (30, 500)}\n",
     "\n",
-    "bo_iters = 2\n",
-    "num_epochs = 10\n",
-    "k_fold = 3"
+    "bo_iters = 5\n",
+    "num_epochs = 2\n",
+    "k_fold = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded previously existing Log with 0 BO iterations.\n",
-      "Start Logging to ./logs/bo_logs_comp_dnn_mnist.json\n"
+      "Merged JSONs - Total its: 1\n",
+      "Removed temporary log file.\n",
+      "Loaded previously existing Log with 1 BO iterations.\n",
+      "Start Logging to ./logs/bo_logs_comp_dnn_mnist.json\n",
+      "BO iter  2 | cv-acc: 0.1063 | best-acc: 0.1811 | time: 10015.14\n",
+      "BO iter  3 | cv-acc: 0.0938 | best-acc: 0.1811 | time: 1119.17\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "No feedback learning rates provided, but 'update_feedback_weights' is True.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-34-035069a681fa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Run Bayesian Optimization (UCB-Acquisition Fct) on CNN for MNIST\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m opt_log = BO_NN(bo_iters, eval_comp_dnn, \"comp_dnn\", \"mnist\", hyper_space_comp_dnn,\n\u001b[0;32m----> 4\u001b[0;31m                 num_epochs, k_fold, logging=True, verbose=True)\n\u001b[0m",
+      "\u001b[0;32m~/Dropbox/PHD_ECN/PROJECTS/Bio-DRL/CODE/utils/bayesian_opt.py\u001b[0m in \u001b[0;36mBO_NN\u001b[0;34m(num_evals, eval_func, func_type, dataset, hyper_space, num_epochs, k_fold, logging, verbose)\u001b[0m\n\u001b[1;32m     73\u001b[0m                 \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext_point\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m             target = eval_func(dataset, 'comp_dnn_params_temp.json',\n\u001b[0;32m---> 75\u001b[0;31m                                num_epochs, k_fold)\n\u001b[0m\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mregister\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnext_point\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Dropbox/PHD_ECN/PROJECTS/Bio-DRL/CODE/models/CompDNN.py\u001b[0m in \u001b[0;36meval_comp_dnn\u001b[0;34m(dataset, param_fname, num_epochs, k_fold, verbose)\u001b[0m\n\u001b[1;32m   1250\u001b[0m         \u001b[0my_sub\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msub_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtest_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1251\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1252\u001b[0;31m         \u001b[0;31m# Instantiate the model with layersize and Logging directory\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1253\u001b[0m         \u001b[0mcomp_dnn_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCompDNN\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_sub\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_sub\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparam_fname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1254\u001b[0m         \u001b[0mcomp_dnn_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_slim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_epochs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Dropbox/PHD_ECN/PROJECTS/Bio-DRL/CODE/models/CompDNN.py\u001b[0m in \u001b[0;36mtrain_slim\u001b[0;34m(self, n_epochs)\u001b[0m\n\u001b[1;32m    673\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mtrain_slim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_epochs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    674\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"b_etas\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"update_feedback_weights\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 675\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"No feedback learning rates provided, but 'update_feedback_weights' is True.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    676\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    677\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: No feedback learning rates provided, but 'update_feedback_weights' is True."
      ]
     }
    ],
    "source": [
-    "\n",
-    "# Run Bayesian Optimization (UCB-Acquisition Fct) on CNN for MNIST\n",
-    "opt_log = BO_NN(bo_iters, eval_comp_dnn, \"comp_dnn\", \"mnist\", hyper_space_comp_dnn,\n",
-    "                num_epochs, k_fold, logging=True, verbose=True)"
+    "\n"
    ]
   },
   {
@@ -1157,7 +1172,7 @@
    "outputs": [],
    "source": [
     "# Run Bayesian Optimization (UCB-Acquisition Fct) on CNN for MNIST\n",
-    "opt_log = BO_NN(bo_iters, eval_comp_dnn, \"comp_dnn\", \"mnist\", hyper_space_comp_dnn,\n",
+    "opt_log = BO_NN(bo_iters, eval_comp_dnn, \"comp_dnn\", \"fashion\", hyper_space_comp_dnn,\n",
     "                num_epochs, k_fold, logging=True, verbose=True)"
    ]
   },
@@ -1168,7 +1183,7 @@
    "outputs": [],
    "source": [
     "# Run Bayesian Optimization (UCB-Acquisition Fct) on CNN for MNIST\n",
-    "opt_log = BO_NN(bo_iters, eval_comp_dnn, \"comp_dnn\", \"mnist\", hyper_space_comp_dnn,\n",
+    "opt_log = BO_NN(bo_iters, eval_comp_dnn, \"comp_dnn\", \"cifar10\", hyper_space_comp_dnn,\n",
     "                num_epochs, k_fold, logging=True, verbose=True)"
    ]
   }
