Log 04/02/19 - Report II

--- a/report/main.bib
+++ b/report/main.bib
@@ -93,3 +93,78 @@
   year={2001},
   publisher={Springer}
 }
+
+@article{larkum_1999,
+  title={A new cellular mechanism for coupling inputs arriving at different cortical layers},
+  author={Larkum, Matthew E and Zhu, J Julius and Sakmann, Bert},
+  journal={Nature},
+  volume={398},
+  number={6725},
+  pages={338},
+  year={1999},
+  publisher={Nature Publishing Group}
+}
+
+@article{yamins_2016,
+  title={Using goal-driven deep learning models to understand sensory cortex},
+  author={Yamins, Daniel LK and DiCarlo, James J},
+  journal={Nature neuroscience},
+  volume={19},
+  number={3},
+  pages={356},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+
+@article{khaligh_2014,
+  title={Deep supervised, but not unsupervised, models may explain IT cortical representation},
+  author={Khaligh-Razavi, Seyed-Mahdi and Kriegeskorte, Nikolaus},
+  journal={PLoS computational biology},
+  volume={10},
+  number={11},
+  pages={e1003915},
+  year={2014},
+  publisher={Public Library of Science}
+}
+
+@article{lecun_1998,
+  title={The MNIST database of handwritten digits},
+  author={LeCun, Yann},
+  journal={http://yann. lecun. com/exdb/mnist/},
+  year={1998}
+}
+
+@article{xiao_2017,
+  title={Fashion-mnist: a novel image dataset for benchmarking machine learning algorithms},
+  author={Xiao, Han and Rasul, Kashif and Vollgraf, Roland},
+  journal={arXiv preprint arXiv:1708.07747},
+  year={2017}
+}
+
+@article{torralba_2008,
+  title={80 million tiny images: A large data set for nonparametric object and scene recognition},
+  author={Torralba, Antonio and Fergus, Rob and Freeman, William T},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={30},
+  number={11},
+  pages={1958--1970},
+  year={2008},
+  publisher={IEEE}
+}
+
+@inproceedings{snoek_2012,
+  title={Practical bayesian optimization of machine learning algorithms},
+  author={Snoek, Jasper and Larochelle, Hugo and Adams, Ryan P},
+  booktitle={Advances in neural information processing systems},
+  pages={2951--2959},
+  year={2012}
+}
+
+@incollection{rasmussen_2004,
+  title={Gaussian processes in machine learning},
+  author={Rasmussen, Carl Edward},
+  booktitle={Advanced lectures on machine learning},
+  pages={63--71},
+  year={2004},
+  publisher={Springer}
+}
